--- a/evalquiz-proxy/production-nginx/nginx.conf
+++ b/evalquiz-proxy/production-nginx/nginx.conf
@@ -1,7 +1,7 @@
 server {
 	listen 80;
 	listen [::]:80;
-	server_name localhost;
+	server_name evalquiz.azurewebsites.net;
 	client_max_body_size 500M;
 
 	keepalive_timeout 5m;
@@ -14,7 +14,7 @@ server {
 
 	location / {
 		proxy_set_header Host $host;
-		proxy_pass http://client-react:3000/;
+		proxy_pass http://client-react/;
 	}
 
 	location /server {
